--- a/manifests/kadalu-operator-openshift.yaml
+++ b/manifests/kadalu-operator-openshift.yaml
@@ -317,7 +317,7 @@ spec:
           securityContext:
             capabilities: {}
             privileged: true
-          image: docker.io/kadalu/kadalu-operator:devel
+          image: docker.io/kadalu/kadalu-operator:arm
           imagePullPolicy: IfNotPresent
           env:
             - name: WATCH_NAMESPACE
@@ -333,7 +333,7 @@ spec:
             - name: DOCKER_USER
               value: "kadalu"
             - name: KADALU_VERSION
-              value: "devel"
+              value: "arm"
             - name: KADALU_NAMESPACE
               value: "kadalu"
             - name: KUBELET_DIR
