--- a/manifests/kadalu-operator.yaml
+++ b/manifests/kadalu-operator.yaml
@@ -286,7 +286,7 @@ spec:
           securityContext:
             capabilities: {}
             privileged: true
-          image: docker.io/kadalu/kadalu-operator:devel
+          image: docker.io/kadalu/kadalu-operator:arm
           imagePullPolicy: IfNotPresent
           env:
             - name: WATCH_NAMESPACE
@@ -302,7 +302,7 @@ spec:
             - name: DOCKER_USER
               value: "kadalu"
             - name: KADALU_VERSION
-              value: "devel"
+              value: "arm"
             - name: KADALU_NAMESPACE
               value: "kadalu"
             - name: KUBELET_DIR
