--- a/.github/workflows/on-pr-merge_arm.yml
+++ b/.github/workflows/on-pr-merge_arm.yml
@@ -10,6 +10,7 @@ on:
       - 'tests/**'
     branches:
       - arm
+      - arm_test
 # Add tags later (for pushing release)
 
 
@@ -40,7 +41,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          KADALU_VERSION=devel make cli-build
+          KADALU_VERSION=arm make cli-build
       -
         name: Build Builder Image
         uses: docker/build-push-action@v2
@@ -48,7 +49,7 @@ jobs:
         with:
           context: .
           file: extras/Dockerfile.builder
-          platforms: linux/arm64,linux/arm/v7
+          platforms: linux/arm64
           push: false
           tags: |
             docker.io/kadalu/builder:latest
@@ -64,7 +65,7 @@ jobs:
         with:
           context: .
           file: csi/Dockerfile
-          platforms: linux/arm64,linux/arm/v7
+          platforms: linux/arm64
           target: prod
           push: true
           tags: |
@@ -81,7 +82,7 @@ jobs:
         with:
           context: .
           file: operator/Dockerfile
-          platforms: linux/arm64,linux/arm/v7
+          platforms: linux/arm64
           target: prod
           push: true
           tags: |
@@ -98,7 +99,7 @@ jobs:
         with:
           context: .
           file: server/Dockerfile
-          platforms: linux/arm64,linux/arm/v7
+          platforms: linux/arm64
           target: prod
           push: true
           tags: |
